16_subseq/grade.txt
Grading at Wed Feb 24 14:52:41 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:25:7: error: ‘lenth’ undeclared (first use in this function)
   if (lenth > maxlen) maxlen = lenth;
       ^
maxSeq.c:25:7: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:25:15: error: ‘maxlen’ undeclared (first use in this function)
   if (lenth > maxlen) maxlen = lenth;
               ^
The code did not compile!

Overall Grade: F
